Fix bug causing overflow of content past viewport height and width

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ img {
 
 body {
     display: flex;
-    
+    height: 100%;
 }
 
 .info {
@@ -42,11 +42,15 @@ body {
     flex-shrink: 0;
     background-image: url(images/bgimg.jpg);
     background-size: cover;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .form {
     height: 100vh;
-    width: 100%;
+    width: 65vw;
     min-width: 650px;
     background-color: blue;
     flex-shrink: 0;
@@ -58,7 +62,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-
+    
 }
 
 .transparent-box img {
@@ -66,8 +70,18 @@ body {
     width: auto;
 }
 
-.transparent-box p {
+.logo-name {
     color: white;
     font-family: "Norse";
     font-size: 120px;
+}
+
+.credit {
+  color: white;
+  text-decoration: none;
+  text-align: center;
+}
+
+.credit a {
+  color: inherit;
 }
